--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,12 +21,15 @@
 	height: 80px;
 }
 }
-@media(max-width:1024px) {
+@media(max-width:1199px) {
+	
+	header {
+		margin-top:0px;
+	}
 }
+
 @media(min-width:992px) and (max-width:1199px) {
-header {
-	margin-top: 40px;
-}
+
 .top-info .personal-info li {
 	padding: 15px 10px;
 }
@@ -285,16 +288,11 @@ header .ownmenu ul.dropdown li a {
 }
 header {
 	padding: 0px;
-}
-header .logo {
-	width: 100%;
-	padding: 0px;
-	text-align: center;
-	border: none;
+	width:95%;
 }
 
 header .logo img {
-height:150px;
+height:100px;
 width:auto;
 }
 
@@ -302,9 +300,7 @@ width:auto;
 header .navbar {
 	width: 100%;
 }
-.top-bar {
-	width: 100%;
-}
+
 header .quotes a {
 	margin-right: 0px;
 }
@@ -323,27 +319,12 @@ header .quotes a {
 .members li {
 	width: 50%;
 }
-}
-
-@media(min-width:1020px) {
-
-	header nav .ownmenu li {
-		float: left;
-		margin: 0px 0px;
-		padding: 0px 0px;
-	}
 }	
 
 @media(min-width:996px) and (max-width:1199px) {
 
 	header {
-	width:95%
-	}
-
-	header nav .ownmenu li {
-		float: left;
-		margin: 0px 0px;
-		padding: 0px 10px;
+	width:90%
 	}
 
 	.top-info .personal-info  {
@@ -354,7 +335,7 @@ header .quotes a {
 
 	}
 	header .logo img {
-		height:70px;
+		height:80px;
 		width: auto;
 		}	
 	
@@ -601,7 +582,7 @@ header {
 }
 header .logo {
 	width: 100%;
-	padding: 20px 0px;
+	padding:0px;
 	text-align: center;
 	border: none;
 }
@@ -656,6 +637,28 @@ header .quotes a {
 }
 @media(max-width:440px) {
 }
+
+@media(min-width:766px) and (max-width:1199px) {
+
+	header .logo {
+		width: 100% !important;
+		padding: 0px;
+		text-align: center !important;
+		border: none;
+	}
+	header .logo img {
+		height:100px;
+		width:auto;
+		}
+}
+
+@media (max-width:1198px) {
+	.top-info {
+		
+		border-bottom: none !important;
+	}
+}
+
 @media(max-width:340px) {
 .members li {
 	width: 100%;
@@ -817,7 +820,7 @@ header .ownmenu {
 	header .ownmenu {
 	
 			float: left;
-			padding:50px;
+			padding:10px;
 			padding-top:0px;
 			padding-right:0px;
 			padding-bottom:0px;
@@ -850,4 +853,116 @@ header .ownmenu {
 		min-height: 490px;
 	}
 
+}
+
+@media (min-width:1021px) and (max-width:1198px) {
+	header .navbar li a {
+		padding: 19px 8px !important;
+	}
+}
+
+@media (max-width:1199px) {
+.top-info .personal-info li {
+    display: none !important;
+}
+.top-info .social li a {
+	display: none !important;
+}
+}
+@media (min-width:766px) and (max-width:768px) {
+ownmenu > li.showhide {
+    display: none;
+}
+.ownmenu > li.showhide span.icon {
+    padding: 0px;
+    padding-right: 40px;
+    margin: 0px;
+}
+}
+
+@media (min-width:950px) and (max-width:980px) {
+	header nav .ownmenu li {
+		padding-right: 9px;
+	}
+
+}
+
+@media (min-width:980px) and (max-width:1000px) {
+	header nav .ownmenu li {
+		padding-right: 8px;
+	}
+
+}
+
+
+
+
+@media (min-width: 768px) and (max-width: 1199px) {
+.top-bar {
+	float:right !important;
+	width: 100% !important;	 
+}
+}
+
+//@media (min-width: 990px) and (max-width: 1100px) {
+	.top-bar {
+		float:right;
+		width: 95%;	
+		padding-left: 50px; 
+	}
+	}
+
+@media(min-width:990px) and (max-width:992px) {
+	header nav .ownmenu li {
+
+		float: left;
+		margin: 0px 0px;
+		padding: 0px 5px;
+}
+}
+
+@media(min-width:992px) and (max-width:1020px) {
+	header nav .ownmenu li {
+
+		float: left;
+		margin: 0px 0px;
+		padding: 0px 16px;
+}
+}
+
+@media(min-width:1020px) and (max-width:1196px) {
+
+	header nav .ownmenu li {
+		float: left;
+		margin: 0px 0px;
+		padding: 0px 20px;
+	}
+}
+
+
+
+@media(max-width:1199px) {
+	.top-info {
+   
+     border: none !important;
+}
+}
+
+@media(min-width:1196px) and (max-width:1199px) {
+	header nav .ownmenu li {
+		font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+		font-size: 16px;
+		color: #313f46;
+		background: none !important;
+		padding: 0px 17px;
+		font-weight: normal;
+		text-transform: uppercase;
+	}
+}
+
+@media(min-width: 1199px) and (max-width:1201px) {
+
+.container {
+    width: 95% !important;
+}
 }
