--- a/css/style.css
+++ b/css/style.css
@@ -406,7 +406,7 @@ header {
 	z-index: 9999;
 	background:#fff;
 	border-bottom:3px solid #ededed;
-	padding-left:30px;
+	padding-left:20px;
 	margin-top:40px;
 }
 header .navbar {
@@ -442,7 +442,7 @@ header .navbar li {
 }
 header .navbar li a {
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-	font-size: 17px;
+	font-size: 16px;
 	color: #313f46;
 	background: none !important;
 	padding: 28px 15px;
@@ -503,13 +503,13 @@ header .quotes a:hover {
       SUB BANNER
 ========================================================*/
 .sub-bnr {
-	background: url(../images/bg/pexels-pixabay-236698.jpg) no-repeat;
+	background: url(../images/bg/pexels-pixabay-256112-2.jpg) no-repeat;
 	background-size: cover;
 	min-height: 550px;
 	text-align: center;
 }
 .sub-bnr h4 {
-	color: #fff;
+	color: white;
 	font-size: 40px;
 	font-weight: normal;
 	text-transform: uppercase;
@@ -524,10 +524,9 @@ header .quotes a:hover {
 	padding:0px;
 }
 .sub-bnr .breadcrumb li {
-	color: #fff;
+	color: white;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	color: #fff;
 	font-size: 12px;
 }
 .sub-bnr .breadcrumb li a {
@@ -662,7 +661,7 @@ header .quotes a:hover {
 } */
  .item{
 	width: 34rem !important;
-	height: 25rem !important;
+	
   }
   .items{
 	display: flex;
@@ -772,168 +771,7 @@ header .quotes a:hover {
 	color: #fff;
 	border-color: #ffbe00;
 }
-/*=======================================================
-      WHY CHOOSE US
-========================================================*/
-.num-process{
-	margin-top:30px;
-}
-.num-process .icon span{
-	height:26px;
-	width:26px;
-	line-height:26px;
-	border-radius:50%;
-	text-align:center;
-	color:#fff;
-	background:#ffbe00;
-	font-size:12px;
-	display:inline-block;
-	margin-bottom:10px;	
-}
-.we-are-good article{
-	border:1px solid #ececec;
-	padding:35px 20px;
-	position:relative;
-	overflow:hidden;
-}
-.we-are-good article h6{
-	margin:0px;
-}
-.we-are-good article{
-	margin-bottom:30px;
-}
-.we-are-good article .icon{
-	margin-right:10px;
-	margin-top:5px;
-}
-.we-are-good article p{
-	margin:0px;
-}
-.we-are-good .go{
-	position:absolute;
-	right:0px;
-	bottom:0px;
-	display:inline-block;
-	height:45px;
-	width:45px;
-	color:#fff;
-	z-index:1;
-    padding-top: 25px;
-    padding-left: 35px;
-}
-.we-are-good .go:before{
-	position:absolute;
-	height:45px;
-	width:45px;
-	content:"";
-	background:#ffbe00;
-	float:left;
-	top:23px;
-	left:23px;
-	z-index:-1;
-	-ms-transform: rotate(45deg); /* IE 9 */
-    -webkit-transform: rotate(45deg); /* Safari */
-    transform: rotate(45deg);
-}
-/*=======================================================
-      TESTI
-========================================================*/
-.testi {
-}
-.testi-name{
-	position:relative;
-	z-index:2;
-	width:50%;
-	margin:0 auto;
-	margin-top:-20px;
-}
-.testi .media-left .avatar {
-	width: 72px;
-	display: inline-block;
-}
-.testi .media-left .avatar:before {
-	height: 72px;
-	width: 72px;
-	position: absolute;
-	content: "";
-	display: inline-block;
-	left: -10px;
-	top: -10px;
-	z-index: 3;
-	border: 2px solid rgba(0,0,0,0.1);
-}
-.testi p {
-	color:#9e9e9e;
-}
-.testi .quote {
-	font-size: 40px;
-	color: rgba(255,255,255,0.2);
-	position: absolute;
-	left: 0px;
-	top: 0px;
-}
-.testi .media-left .avatar img {
-	position: relative;
-	z-index: 9;
-}
-.testi h5 {
-	font-size: 15px;
-	color: #ffbe00;
-	margin-bottom: 10px;
-	margin-top: 30px;
-	font-weight:normal;
-	text-transform: none;
-	letter-spacing:1px;
-}
-.testi .owl-nav {
 
-}
-.testi .owl-nav div.owl-prev {
-	display: inline-block !important;
-	color: #344248;
-	margin: 0 15px;
-	height: 62px;
-	width: 32px;
-	border-radius: 4px;
-	border: 1px solid #ececec;
-	line-height: 58px;
-	text-align: center;
-	position:absolute;
-	top:50%;
-	left:-100px;
-	margin-top:-60px;
-}
-.testi .owl-nav div.owl-next{
-	display: inline-block !important;
-	color: #344248;
-	margin: 0 15px;
-	height: 62px;
-	width: 32px;
-	border-radius: 4px;
-	border: 1px solid #ececec;
-	line-height: 58px;
-	text-align: center;
-	position:absolute;
-	top:50%;
-	right:-100px;
-	margin-top:-60px;
-}
-.testi .owl-nav div.owl-next:hover{
-	background:#344248;
-	border-color:#344248;
-	color:#fff;
-}
-.testi .owl-nav div.owl-prev:hover{
-	background:#344248;
-	border-color:#344248;
-	color:#fff;
-}
-.testi .owl-dots {
-	position: absolute;
-	right: -20px;
-	top: 40%;
-	width: 6px;
-}
 .testi .owl-dots div {
 	height: 6px;
 	width: 6px;
@@ -2187,3 +2025,9 @@ footer button{
 	width:60%;
 	margin:0 auto;
 }
+
+.container .row #img-footer {
+height: 120px;
+width:auto;
+}
+
